style: fix cards hover effects being clickable on mobile & global select and select text color

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 
 .brands {
-  @apply grayscale hover:grayscale-0 duration-300 transition-all md:w-24 md:h-12 w-18 h-10 opacity-70 hover:opacity-100
+  @apply grayscale hover:grayscale-0 active:grayscale-0 duration-300 transition-all md:w-24 md:h-12 w-18 h-10 opacity-70 hover:opacity-100 active:opacity-100
 }
 
 .card {
@@ -20,7 +20,7 @@
 }
 
 .button {
-  @apply backdrop-blur-md rounded-full transform hover:-translate-y-1 transition-all duration-300 border border-white/50 hover:cursor-pointer hover:shadow-lg
+  @apply backdrop-blur-md rounded-full transform hover:-translate-y-1 active:-translate-y-1 transition-all duration-300 border border-white/50 hover:cursor-pointer hover:shadow-lg
 }
 
 .gradient {
@@ -61,6 +61,10 @@
   }
 }
 
+::selection{
+  background-color: #9333ea;
+  color: white;
+}
 
 :root {
 
